--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -2,28 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "5ea58854",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'config'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29276/1793431797.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mconfig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# import the requests library\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'config'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import the dependencies\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import config \n",
     "\n",
     "# import the requests library\n",
     "import requests\n",
@@ -37,8 +24,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "564a4b11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# starting url\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b3d6717c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zip at 0x1e15b05e508>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a set of 2000 random latitude and longitude combinations\n",
+    "lats = np.random.uniform(low=-90.000, high=90.000, size=2000)\n",
+    "lngs = np.random.uniform(low=-180.000, high=180.000, size=2000)\n",
+    "lat_lngs = zip(lats, lngs)\n",
+    "lat_lngs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a4de8360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the latitudes and longitudes to a list\n",
+    "coordinates = list(lat_lngs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "03b1b5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "51f7856c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "738"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the nearest city using citipy\n",
+    "cities = []\n",
+    "\n",
+    "# Identify the nearest city for each latitude and longitude combination.\n",
+    "for coordinate in coordinates:\n",
+    "    city = citipy.nearest_city(coordinate[0], coordinate[1]).city_name\n",
+    "\n",
+    "    # If the city is unique, add it to the cities list.\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "        \n",
+    "# Print the city count to confirm sufficient count.\n",
+    "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14b0e1f6",
    "metadata": {},
    "outputs": [],
    "source": []
