--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "796a532c",
+   "id": "ac90a7ac",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f21fcffd",
+   "id": "153d964b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9899093e",
+   "id": "d7a3f648",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "34ceb761",
+   "id": "e53482de",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "887e6555",
+   "id": "d568ec5f",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "63d45d88",
+   "id": "5a5281e8",
    "metadata": {},
    "outputs": [
     {
@@ -1027,8 +1027,368 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "4173962c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Current Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Murdochville</td>\n",
+       "      <td>48.9583</td>\n",
+       "      <td>-65.5006</td>\n",
+       "      <td>24.30</td>\n",
+       "      <td>77</td>\n",
+       "      <td>92</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Qaanaaq</td>\n",
+       "      <td>77.4840</td>\n",
+       "      <td>-69.3632</td>\n",
+       "      <td>-4.02</td>\n",
+       "      <td>68</td>\n",
+       "      <td>56</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hermanus</td>\n",
+       "      <td>-34.4187</td>\n",
+       "      <td>19.2345</td>\n",
+       "      <td>67.89</td>\n",
+       "      <td>78</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10.71</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mataura</td>\n",
+       "      <td>-46.1927</td>\n",
+       "      <td>168.8643</td>\n",
+       "      <td>48.47</td>\n",
+       "      <td>94</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bethel</td>\n",
+       "      <td>41.3712</td>\n",
+       "      <td>-73.4140</td>\n",
+       "      <td>47.43</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>US</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0  Murdochville  48.9583  -65.5006     24.30        77          92   \n",
+       "1       Qaanaaq  77.4840  -69.3632     -4.02        68          56   \n",
+       "2      Hermanus -34.4187   19.2345     67.89        78         100   \n",
+       "3       Mataura -46.1927  168.8643     48.47        94          82   \n",
+       "4        Bethel  41.3712  -73.4140     47.43        38           1   \n",
+       "\n",
+       "   Wind Speed Country Current Description  \n",
+       "0       24.00      CA     overcast clouds  \n",
+       "1        3.33      GL       broken clouds  \n",
+       "2       10.71      ZA     overcast clouds  \n",
+       "3        1.03      NZ       broken clouds  \n",
+       "4        4.00      US           clear sky  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add city data to new dataframe\n",
+    "city_data_df = pd.DataFrame(city_data)\n",
+    "city_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c75d2787",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Current Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Murdochville</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>48.9583</td>\n",
+       "      <td>-65.5006</td>\n",
+       "      <td>24.30</td>\n",
+       "      <td>77</td>\n",
+       "      <td>92</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Qaanaaq</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>77.4840</td>\n",
+       "      <td>-69.3632</td>\n",
+       "      <td>-4.02</td>\n",
+       "      <td>68</td>\n",
+       "      <td>56</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hermanus</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>-34.4187</td>\n",
+       "      <td>19.2345</td>\n",
+       "      <td>67.89</td>\n",
+       "      <td>78</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10.71</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mataura</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>-46.1927</td>\n",
+       "      <td>168.8643</td>\n",
+       "      <td>48.47</td>\n",
+       "      <td>94</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bethel</td>\n",
+       "      <td>US</td>\n",
+       "      <td>41.3712</td>\n",
+       "      <td>-73.4140</td>\n",
+       "      <td>47.43</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>Andros Town</td>\n",
+       "      <td>BS</td>\n",
+       "      <td>24.7000</td>\n",
+       "      <td>-77.7667</td>\n",
+       "      <td>76.96</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.82</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>Quatre Cocos</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>-20.2078</td>\n",
+       "      <td>57.7625</td>\n",
+       "      <td>78.91</td>\n",
+       "      <td>69</td>\n",
+       "      <td>100</td>\n",
+       "      <td>16.51</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>Cabra</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>37.4725</td>\n",
+       "      <td>-4.4421</td>\n",
+       "      <td>58.66</td>\n",
+       "      <td>63</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.53</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>679</th>\n",
+       "      <td>Los Llanos De Aridane</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>28.6585</td>\n",
+       "      <td>-17.9182</td>\n",
+       "      <td>64.15</td>\n",
+       "      <td>84</td>\n",
+       "      <td>75</td>\n",
+       "      <td>10.36</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>Wanning</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>18.8003</td>\n",
+       "      <td>110.3967</td>\n",
+       "      <td>68.05</td>\n",
+       "      <td>82</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10.13</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>681 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      City Country      Lat       Lng  Max Temp  Humidity  \\\n",
+       "0             Murdochville      CA  48.9583  -65.5006     24.30        77   \n",
+       "1                  Qaanaaq      GL  77.4840  -69.3632     -4.02        68   \n",
+       "2                 Hermanus      ZA -34.4187   19.2345     67.89        78   \n",
+       "3                  Mataura      NZ -46.1927  168.8643     48.47        94   \n",
+       "4                   Bethel      US  41.3712  -73.4140     47.43        38   \n",
+       "..                     ...     ...      ...       ...       ...       ...   \n",
+       "676            Andros Town      BS  24.7000  -77.7667     76.96        71   \n",
+       "677           Quatre Cocos      MU -20.2078   57.7625     78.91        69   \n",
+       "678                  Cabra      ES  37.4725   -4.4421     58.66        63   \n",
+       "679  Los Llanos De Aridane      ES  28.6585  -17.9182     64.15        84   \n",
+       "680                Wanning      CN  18.8003  110.3967     68.05        82   \n",
+       "\n",
+       "     Cloudiness  Wind Speed Current Description  \n",
+       "0            92       24.00     overcast clouds  \n",
+       "1            56        3.33       broken clouds  \n",
+       "2           100       10.71     overcast clouds  \n",
+       "3            82        1.03       broken clouds  \n",
+       "4             1        4.00           clear sky  \n",
+       "..          ...         ...                 ...  \n",
+       "676           1       13.82           clear sky  \n",
+       "677         100       16.51     overcast clouds  \n",
+       "678           3        2.53           clear sky  \n",
+       "679          75       10.36       broken clouds  \n",
+       "680          17       10.13          few clouds  \n",
+       "\n",
+       "[681 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reorder columns accordingly.\n",
+    "new_column_order = ['City', 'Country','Lat', 'Lng', 'Max Temp', 'Humidity', 'Cloudiness', 'Wind Speed', 'Current Description']\n",
+    "city_data_df = city_data_df[new_column_order]\n",
+    "city_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d5236067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export dataframe\n",
+    "output_data_file = 'WeatherPy_Database.csv'\n",
+    "city_data_df.to_csv(output_data_file, index_label='City_ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b661c17b",
+   "id": "dc30f341",
    "metadata": {},
    "outputs": [],
    "source": []
